[package]
name = "tokio-stomp-2_1"
version = "0.3.1"
description = "Unofficial successor to Asynchronous streaming STOMP client"
authors = ["Jens Walter <jens@apimeister.com>, Alexander Kunde <a.kunde@outlook.com>"]
repository = "https://github.com/Fortech-Products-SRL/rmt-tokio-stomp-2.1"
homepage = "http://github.com/alexkunde/tokio-stomp-2"
keywords = ["stomp", "tokio", "streaming"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1.1.0"
custom_debug_derive = "0.6.2"
anyhow = "1.0"
smallvec = "1.13"
futures = "0.3"
tokio = { version = "1", features = ["net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
nom = "8.0.0"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
dotenvy = "0.15.7"
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
